# lka-carla

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  REPORT.md  carla_utils.py
analysis/: eval_controller.py  eval_perception.py  plot_perception.py  results_summary.md  run_scnn_on_image.py
analysis/results/: metrics.csv  raw_frames.csv
analysis/results/controller/: controller_metrics.csv  controller_metrics_summary.csv  raw_frames.csv
analysis/results/perception/: metrics.csv  raw_frames.csv
bags/20260508_165339/: 20260508_165339_0.db3  metadata.yaml
bags/20260508_170715/: 20260508_170715_0.db3  metadata.yaml
bags/20260510_201229/: metadata.yaml
bags/20260511_141516/: metadata.yaml
bags/20260513_225012/: metadata.yaml
bags/closed_loop/: calibration_log.csv
bags/closed_loop/pure_vision_clear_20260511_163249/: metadata.yaml  pure_vision_clear_20260511_163249_0.db3
bags/closed_loop/pure_vision_clear_rep1_20260511_171902/: metadata.yaml  pure_vision_clear_rep1_20260511_171902_0.db3
bags/closed_loop/pure_vision_clear_rep2_20260511_173518/: metadata.yaml  pure_vision_clear_rep2_20260511_173518_0.db3
bags/closed_loop/pure_vision_clear_rep3_20260511_175127/: metadata.yaml  pure_vision_clear_rep3_20260511_175127_0.db3
bags/closed_loop/scnn_clear_20260511_163743/: metadata.yaml  (+1 more)
lka.yolo26/: README.roboflow.txt  data.yaml
lka_ws/src/lka_bringup/: CMakeLists.txt
lka_ws/src/lka_bringup/config/: objects.json  objects_town3.json
lka_ws/src/lka_bringup/launch/: bring_up_carla.launch.py  closed_loop.launch.py  lka_pipeline.launch.py  perception_only.launch.py  record_bag.launch.py
lka_ws/src/lka_bringup/scripts/: run_trials.py
lka_ws/src/lka_control/: CMakeLists.txt  package.xml
lka_ws/src/lka_control/config/: controller_params.yaml
lka_ws/src/lka_control/launch/: lka_controller.launch.py
lka_ws/src/lka_control/scripts/: lka_controller_node.py
lka_ws/src/lka_dataset_collection/: CMakeLists.txt  package.xml
lka_ws/src/lka_dataset_collection/config/: objects.json  roi.yaml
lka_ws/src/lka_dataset_collection/launch/: bring_up_carla.launch.py  carla_spawn_vehicle.launch.py
lka_ws/src/lka_dataset_collection/scripts/: dataset_collector_node.py  dummy_script.py  lane_detection_node.py  opencv_process.ipynb  save_sem_sample.py  set_roi.py  test.ipynb  train.ipynb  upload_to_roboflow.py
lka_ws/src/lka_dataset_collection/src/: cpp_node.cpp
lka_ws/src/lka_perception/: CMakeLists.txt  package.xml
lka_ws/src/lka_perception/config/: lane_detection_params.yaml  pure_vision_params.yaml  roi.yaml  scnn_params.yaml  yolo_params.yaml
lka_ws/src/lka_perception/launch/: gt.launch.py  lane_detection.launch.py  pure_vision.launch.py  run_all_perception.launch.py  scnn.launch.py  yolo.launch.py
lka_ws/src/lka_perception/scripts/: gt_node.py  lane_detection_node.py  opencv_process.ipynb  pure_vision_node.py  scnn_node.py  scnn_process.ipynb  yolo_node.py  yolo_process.ipynb
training/: SCNN_SETUP.md  scnn_lka_config.py  upload_to_roboflow.py  yolo2scnn.py
training&process/: export_opencv_results.py  export_scnn_results.py  export_yolo_results.py  split_data.py  train.ipynb
(+95 files in other folders)
